# godot-ink-plusplus

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  config.cmake  register_types.cpp  register_types.h
godot/: icon.svg.import  project.godot  story.tres  test.tscn  test_story.ink  test_story.res
godot/addons/ink_plusplus/: ink_cpp.gdextension  ink_player_editor.tscn  ink_player_entry.tscn  ink_syntax_highlighter.gd
godot/test_stories/: functions.ink  functions_test.ink  functions_test.res  functions_test_2.ink  functions_test_2.res  include.ink  include_test.ink  include_test.res  test_story.ink  test_story.res  test_story_2.res  test_story_3.ink  test_story_3.res  test_story_3a.ink  test_story_3a.res  unicode.ink  unicode.res
godot/test_stories/subdir/: test.res
include/: ink_compiler_gd.h  ink_gd_utils.h  ink_player_editor.h  ink_player_entry.h  ink_plugin.h  ink_story.h  ink_story_compiled.h  ink_syntax_highlighter.h
src/: ink_compiler_gd.cpp  ink_gd_utils.cpp  ink_player_editor.cpp  ink_player_entry.cpp  ink_plugin.cpp  ink_story.cpp  ink_story_compiled.cpp  ink_syntax_highlighter.cpp
